--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,32 @@
-composer.phar
-/vendor/
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
 
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# Sajat fileok / mappak
+uploads/
+_TEMP/
+*.log
+*.tmp
+system/config/db_local.php
+system/config/db_online.php
+system/config/email.php
+
+# composer
+/vendor/
+composer.lock
+composer.phar
