gitignore az eredetire modositva

--- a/.gitignore
+++ b/.gitignore
@@ -17,16 +17,42 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+
 # Sajat fileok / mappak
-uploads/
-_TEMP/
 *.log
 *.tmp
+uploads/
+nbproject/
+_TEMP/
 system/config/db_local.php
 system/config/db_online.php
 system/config/email.php
 
-# composer
-/vendor/
-composer.lock
-composer.phar
+#system/libs/tfpdf/font/unifont/arial.mtx.php
+#system/libs/tfpdf/font/unifont/arialb.mtx.php
+#system/libs/tfpdf/font/unifont/arial_i.mtx.php
+#system/libs/tfpdf/font/unifont/arial.cw127.php
+#system/libs/tfpdf/font/unifont/arial_i.mtx.php
+#system/libs/tfpdf/font/unifont/arialb.cw127.php
